--- a/Index.pug
+++ b/Index.pug
@@ -5,5 +5,9 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="styles.css")
     title Image Gallery
-  body
-    .
+  
+tbody
+        tr
+            td
+                a(href='Screenshot_20240904-130612_KMPlayer.jpg', target='_blank') Open Image
+            td Additional Data
