--- a/style.scss
+++ b/style.scss
@@ -1,20 +1,42 @@
-$background-image: url('Picsart_24-09-26_15-03-59-962'); // Background image path
-$image-width: 150px; // Width of the images
-
 body {
-    
-    background-image: $background-image;
-    background-size: cover; // Ensures the background covers the whole area
-    display: flex;
-    justify-content: flex-end; // Aligns the container to the right
-    height: 100vh; // Full height
-width:100vh;
-    height:780px;
-    width:360px;
-    
-    table{
-    width: 360px;
-    border-collapse: collapse;
-tb ,td{
-    background-colour:violent;
+  margin: 0;
+  height: 100vh;
+  background-image: url('your-background-image.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.background-color {
+  width: 360px;
+  height: 220px;
+  background-color: violet;
+  margin-top: 240px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 60px;
+
+  .image-small {
+    width: 100px;
+    height: 100px;
+    margin-top: 60px;
+
+    &:nth-child(1) {
+      margin-right: 40px; // Space between two images
     }
+
+    a {
+      display: block; // Makes the entire image clickable
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      line-height: 100px; // Centers image vertically if needed
+    }
+  }
+}
