--- a/Style.css
+++ b/Style.css
@@ -1,22 +1,43 @@
-$background-image: url('Picsart_24-09-26_15-03-59-962.jpg'); // Background image path
-$image-width: 150px; // Width of the images
+* {
+    box-sizing: border-box;
+}
 
 body {
-  
-    background-image: $background-image;
-    background-size: cover; // Ensures the background covers the whole area
-    display: flex;
-    justify-content: flex-end; // Aligns the container to the right
-    height: 100vh; // Full height
-width:100vh
-height:770px;
-width:360px;
+    margin: 0;
+    height: 100vh;
+    background-image: url('Picsart_24-09-26_15-03-59-962.jpg'); /* Replace with your image URL */
+    background-size: cover;
+    background-position: center;
 }
-    table{
-background-colour:violet;
-margin-left:0px;
-      margin-right:0px;
-      margin-bottom:300px;
-      margin-top:300px;
 
-    }
+.container {
+    width: 360px;
+    height: 720px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.background-box {
+    width: 360px;
+    height: 220px;
+    background-color: violet;
+    margin-top: 300px;
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: space-between; /* Space between images */
+    align-items: flex-start;
+    padding: 0 60px; /* Left and right margin for the box */
+}
+
+.image {
+    width: 100px;
+    height: 100px;
+    cursor: pointer;
+    margin-top: 0; /* No top margin, handled by background box */
+}
+
+.image:not(:last-child) {
+    margin-right: 30px; /* Space between images */
+}
