--- a/Index.pug
+++ b/Index.pug
@@ -2,12 +2,11 @@ doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet" href="styles.css")
-    title Image Gallery
-  
-tbody
-        tr
-            td
-                a(href='Screenshot_20240904-130612_KMPlayer.jpg', target='_blank') Open Image
-            td Additional Data
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    link(rel="stylesheet" href="styles.css") // Link to your compiled CSS
+    title Your Website
+  body
+    .container
+      .background-box
+        img.image(src="images (2).jpeg" alt="Image 1" onclick="window.open('image1.jpg')") // Replace with your image URL
+        img.image(src="download (3).jpeg" alt="Image 2" onclick="window.open('image2.jpg')") // Replace with your image URL
