--- a/style.scss
+++ b/style.scss
@@ -1,42 +1,43 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-  margin: 0;
-  height: 100vh;
-  background-image: url('your-background-image.jpg');
-  background-size: cover;
-  background-position: center;
+    margin: 0;
+    height: 100vh;
+    background-image: url('Picsart_24-09-26_15-03-59-962.jpg'); // Replace with your image URL
+    background-size: cover;
+    background-position: center;
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
+    width: 360px;
+    height: 720px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.background-color {
-  width: 360px;
-  height: 220px;
-  background-color: violet;
-  margin-top: 240px;
-  display: flex;
-  justify-content: space-between;
-  padding: 0 60px;
+.background-box {
+    width: 360px;
+    height: 220px;
+    background-color: violet;
+    margin-top: 300px;
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: space-between; // Space between images
+    align-items: flex-start;
+    padding: 0 60px; // Left and right margin for the box
+}
 
-  .image-small {
+.image {
     width: 100px;
     height: 100px;
-    margin-top: 60px;
+    cursor: pointer;
+    margin-top: 0; // No top margin, handled by background box
+}
 
-    &:nth-child(1) {
-      margin-right: 40px; // Space between two images
-    }
-
-    a {
-      display: block; // Makes the entire image clickable
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      line-height: 100px; // Centers image vertically if needed
-    }
-  }
+.image:not(:last-child) {
+    margin-right: 30px; // Space between images
 }
